fixed overlap error for questions with no comments.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -342,6 +342,10 @@ body {
     top: -85px;
 }
 
+.titleDiv {
+    margin-top: 10%;
+}
+
 .title2 {
     position: relative;
     font-family: fontBold;
